--- a/chat.html
+++ b/chat.html
@@ -9,15 +9,12 @@
         <meta name="keywords" content="vendeur, virtuel, chatbot, achat, automatisé, facebook, messenger, conversation" />
         <meta name="author" content="Nicolas Brondin, Maxime Pauvert" />
         <meta name="copyright" content="Lekel - 2016" />
-        <link rel="stylesheet" href="style.css"/>
         <meta charset="utf-8"/>
     </head>
-    <body>
-        <img id="logo" src="img/logo.png"/>
-        <br>
-        <a id="messenger" href="http://m.me/HelloLekel"><img src="img/messenger.png"/></a>
-        <p>Propulsé au #SWTours avec <3</p>
-            <a href="mailto:hello@lekel.co">hello@lekel.co</a>
-        
+    <body style="margin: 0;">
+<iframe
+    style="position:fixed; top:0px; left:0px; bottom:0px; right:0px; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" rameBorder="0" scrolling="no"
+    src="https://console.api.ai/api-client/demo/embedded/9a3bd11c-b82c-41cd-9160-bc42c14da4fc">
+</iframe>
     </body>
 </html>
